example/constraints/all_pod_must_have_gatekeeper_namespaceselector.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sRequiredLabels
metadata:
  name: pod-must-have-gk
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
      - key: workloadtype
        operator: In
        values: [prodworkload]
  parameters:
    labels: ["gatekeeper"]
